# breakout-game

./: Cargo.toml  README.md
src/: main.rs
src/api/: make_calls.rs
src/client/helpers/: collisions.rs  font_data.rs  mod.rs
src/client/models/: ball.rs  brick.rs  mod.rs  paddle.rs  structures.rs
src/client/screens/: game.rs  game_over.rs  game_play.rs  home.rs  leaderboard.rs  mod.rs  scoreboard.rs  start.rs
src/helpers/: collisions.rs
src/models/: brick.rs  paddle.rs
src/screens/: game.rs  home.rs
src/test/api/: make_calls_test.rs  mod.rs
src/test/screens/: home_test.rs  mod.rs
