[package]
name = "breakout-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
lazy_static = "1.5.0"
mockall = "0.13.1"
mockito = "0.30"
raylib = "3.7"
reqwest = { version="0.12.15", features = ["json"] }
rpassword = "7.3.1"
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = "0.8.3"
tokio = { version="1.44.1", features = ["full"] }
